[FIX] stock_barcode: spacing between buttons
Mark the difference between 2 buttons.

--- a/stock_barcode/static/src/scss/client_action.scss
+++ b/stock_barcode/static/src/scss/client_action.scss
@@ -271,6 +271,7 @@
             }
             + .btn {
                 border-left-width: 1px;
+                border-left-color: $gray-400;
             }
         }
         .fa-angle-left, .fa-angle-right {
